# SLGs-REST-API

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: api-request.md  feature_request.md  new-api-request.md
.github/workflows/: rust-ci.yaml
doc/: book.toml
doc/src/: SUMMARY.md  car.md  register_user.md  weather.md
src/: api.rs  db.rs  error.rs  lib.rs  main.rs  register.rs  weather.rs
src/api/: car.rs
src/api/weather/: city_id.rs
src/register/: form.html  success.html
src/weather/: city_id.rs
