[package]
name = "slgs-rest-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.6.0"
actix-web = {version= "3.3.3", features = ["openssl"]}
openssl = "0.10.38"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
